Upgrade JHipster to v8.0.0-rc.1